# python-action

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: action-ci.yml  action-lint.yml
src/: __main__.py  main.py  wait.py
tests/: test_main.py  test_wait.py
